--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,34 @@ Currently we have more than 280 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Harald Staub, firstname . lastname @switch .ch>
+<br><b>Date:</b> Wed, 03 Jul 2013 17:08:10 +0200
+<pre>
+How many hosts have you installed using fai? <b>about 90 </b>
+Which version of fai are you using? normally from current Debian stable, also from Debian testing when late in cycle
+
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? server hardware, VM templates
+
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? sometimes it was necessary to use backports or testing
+
+Do you manage your configuration space under version control? yes
+How big is your config space (Mbytes, # of files)? 2.4M, 819
+How many files do you have in ../config/files? 593
+
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> <a href="http://www.switch.ch">SWITCH</a>
+<p>   internet services for the Swiss universities, registry for domain names ending in .ch and .li
+<br><b>Additional comments:</b> 
+number of indirectly installed systems is not included above (VMs
+based on templates that in turn are made with fai) (maybe 200).
+See also our last FAI questionnaire from 2004-09-01
+</pre> <HR>
+
+
 <b>From:</b> Tobias Kreilos,  firstname dot lastname @ physik.uni dash marburg de
 <br><b>Date:</b> Wed, 20 Feb 2013 15:00:24 +0100
 <pre>
@@ -63,7 +91,6 @@ What types of scripts are you using for local customization? shell
 <br><b>Additional comments:</b>
 It took some time to set it up, but now installing and updating became so easy :)
 </pre> <HR>
-
 
 
 <b>From:</b> Paolo Miotto = paolo. miotto @at@ uniud dot it
