update ubuntu release names

--- a/download/index.html
+++ b/download/index.html
@@ -65,13 +65,13 @@ Have a look at <a href="https://launchpad.net/~fai/+archive/ppa">PPA</a> or the
 <a href="https://launchpad.net/ubuntu/+source/fai">list</a> of FAI packages in Ubuntu releases.
 <p>
 <div class="featurebox"><h3>
-<pre>deb http://ppa.launchpad.net/fai/ubuntu lucid main</pre>
+<pre>deb http://ppa.launchpad.net/fai/ubuntu precise main</pre>
 </h3></div>
 
-FAI 3.4.x packages are included in Ubuntu natty.
+FAI 3.4.x packages are included in Ubuntu precise.
 <p>
 <div class="featurebox"><h3>
-<pre>deb http://archive.ubuntu.com/ubuntu natty universe</pre>
+<pre>deb http://archive.ubuntu.com/ubuntu precise universe</pre>
 </h3></div>
 
 <p>
