--- a/reports/index.html
+++ b/reports/index.html
@@ -35,6 +35,32 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 Currently we have more than 280 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
 <p>
 <hr/>
+
+
+<b>From:</b> Frank Steinberg
+<br><b>Date:</b> Tue, 8 Oct 2013 11:25:48 +0200
+<pre>
+How many hosts have you installed using fai? <b>approx. 200</b>
+Which version of fai are you using? <b>3.4.8 (Ubuntu raring)</b>
+Which version are you using as your install kernel? Plain Ubuntu
+
+Which types of hosts are you installing with fai? desktop PCs, various servers, virtual machines, cloud nodes
+
+How do you boot your hosts? PXE
+Does the default install kernel recognize all your hardware? everything is fine, except for some nVidia trouble
+Do you manage your configuration space under version control? not yet
+How big is your config space (Mbytes, # of files)? 3MB in 333 files (except files/opt)
+How many files do you have in ../config/files? 251 (plus 64000 files in files/opt which is rsynced by a script)
+What types of scripts are you using for local customization? bash shell scripts
+
+<b>What is the business of your company/organisation?</b> research and higher education,
+<a href="http://www.ibr.cs.tu-bs.de/">TU Braunschweig, Institut für Betriebssysteme und Rechnerverbund</a>
+<br><b>Additional comments:</b>
+Meanwhile we use FAI for our Ubuntu 13.10 setup.
+</pre> <HR>
+
+
+
 <a id=sindermann></a>
 <b>From:</b> Andreas Sindermann, sinder ä thp döt uni-koeln de
 <br><b>Date:</b> Wed, 9 Oct 2013 11:00:10 +0200 (MEST)
@@ -46,13 +72,13 @@ Which version are you using as your install kernel? 3.2.0-32-generic-pae
 
 Which types of hosts are you installing with fai? Desktop machines, no servers
 
-How do you boot your hosts?   PXE+DHCP
+How do you boot your hosts?  PXE+DHCP
 Does the default install kernel recognize all your hardware? yes
 Which drivers are missing?  none
 Do you manage your configuration space under version control? no
 
 How big is your config space (Mbytes, # of files)?  54M, 111 files
-How many files do you have in ../config/files?    59
+How many files do you have in ../config/files?  59
 
 What types of scripts are you using for local customization?  mostly shell, very little cfengine/perl
 <b>What is the business of your company/organisation?</b> <a href=http://www.thp.uni-koeln.de/>Institute for Theoretical Physics</a>, University of Cologne
