add link to spanish docu

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -142,6 +142,9 @@ FAI. This code is no longer maintained.
 <h2>FAI documentation in German</h2>
 <ul>
 
+
+<li> <a href="http://blog.secretisland.de/category/fai-2/">Several blog entries</a>
+
 <li> <a href="https://www.pug.org/mediawiki/index.php/FAI_SPARC_Debian">Debian auf SPARC mit FAI</a>. Ein detailliertes HOWTO.
 
 <li> <a href="http://www.lug-erding.de/vortrag/FAI.pdf">Talk</a> at LUG Erding (3/2011)
@@ -231,6 +234,9 @@ work, what is possible, how does the company use FAI.
 <li> <b>Spanish, espa&ntilde;ol</b>
 <ul>
 <li> A <a href="https://forja.rediris.es/docman/view.php/428/793/memoria_desdeslin.pdf">documentation</a> of three FAI installations (Despliegue desatendido de GNU/Linux, Linux unattended deployment) (2009).
+
+<li> <a href="http://www.maia.ub.es/~jaume/TFC/FrancescSebastiaMartinez.pdf">INSTALACI&Oacute;N (SEMI)AUTOM&Aacute;TICA
+DE NODOS EN UN CLUSTER</a>
 </ul>
 <li> <b>French, fran&ccedil;ais</b>
 <ul>
