--- a/reports/index.html
+++ b/reports/index.html
@@ -37,6 +37,32 @@ Currently we have more than 280 detailed reports. Please also fill out the <a hr
 <hr/>
 
 
+<b>From:</b> Michael van Appeldorn
+<br><b>Date:</b> Tue, 12 Nov 2013 10:36:54 +0100
+<pre>
+How many hosts have you installed using fai? <b>~350</b>
+Which version of fai are you using? <b>3.4.7</b>
+Which version are you using as your install kernel?  plain Debian kernel
+
+Which types of hosts are you installing with fai? Servers for web, mail, scality, proxy, storage, queue and monitoring
+
+How do you boot your hosts? via network (PXE, DHCP)
+
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? none
+
+Do you manage your configuration space under version control? Yes: SVN
+How big is your config space (Mbytes, # of files)? 28M, 346 files
+How many files do you have in ../config/files? 209
+
+What types of scripts are you using for local customization? shell, perl, expect
+
+<b>What is the business of your company/organisation?</b> social networking site
+<br><b>Additional comments:</b>
+FAI saved us hundreds of hours for installation :)
+</pre> <HR>
+
+
 <b>From:</b> Frank Steinberg
 <br><b>Date:</b> Tue, 8 Oct 2013 11:25:48 +0200
 <pre>
