--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,33 @@ Currently we have more than 280 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Steffen Eichler,  name1.name2 @ stayfriends.com
+<br><b>Date:</b> Wed, 20 Nov 2013 17:13:29 +0100
+<pre>
+How many hosts have you installed using fai? <b>700+</b>
+Which version of fai are you using? live <b>3.4.7</b>, migration to 4.0.7 ongoing.
+
+Which version are you using as your install kernel? For squeeze installations 3.1.0-grml64.
+      For wheezy debian plain kernel.
+
+Which types of hosts are you installing with fai? All servers.
+
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? no
+Which drivers are missing? Network card drivers for actual servers.
+
+Do you manage your configuration space under version control? yes (subversion)
+How big is your config space (Mbytes, # of files)? squeeze 492K, #16
+How many files do you have in ../config/files?  squeeze #16
+What types of scripts are you using for local customization? puppet
+
+<b>What is the business of your company/organisation?</b> social network platform, <a href="http://www.stayfriends.com">StayFriends GmbH</a>
+<br><b>Additional comments:</b>
+We are running a very basic setup to perform the basic partitioning
+and minimal OS installation; the rest is managed by puppet.
+</pre> <HR>
+
+
 
 <b>From:</b> Michael van Appeldorn
 <br><b>Date:</b> Tue, 12 Nov 2013 10:36:54 +0100
