--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -64,8 +64,7 @@ can be displayed
 <li> --- TODO ---
 <li> relax and recover
 <li> --- MINOR WISHES (will be postponed to 4.1) ---
-<li> send MAC address to faimond (or hostname), use BOOTIF for that?,
-patch from lhm
+<li> send MAC address to faimond (or hostname) DONE
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
@@ -78,7 +77,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Sat, 12 May 2012 11:38:34 +0200
+Fri, 29 Nov 2013 00:43:59 +0100
 </ADDRESS>
 
       </div>
