--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -65,19 +65,19 @@ can be displayed
 <li> relax and recover
 <li> --- MINOR WISHES (will be postponed to 4.1) ---
 <li> send MAC address to faimond (or hostname) DONE
+<li> new action inventory DONE
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
-<li> new action inventory
 </ul>
 
 <p>
 
 <HR>
 <ADDRESS>
-Fri, 29 Nov 2013 00:43:59 +0100
+Fri, 29 Nov 2013 16:16:52 +0100
 </ADDRESS>
 
       </div>
