add link to visual overview

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -32,6 +32,8 @@
 
 <li> <a href="http://wiki.fai-project.org/wiki/Variables">List</a>  of important variables
 inside FAI
+ <li> A <a href="http://wiki.fai-project.org/wiki/FAI_Installation_Overview
+">visual overview</a> of how all the pieces of an FAI installation fit together. 
 
 <!-- 
 <li> <a href=""></a>
