--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -35,6 +35,11 @@ inside FAI
  <li> A <a href="http://wiki.fai-project.org/wiki/FAI_Installation_Overview
 ">visual overview</a> of how all the pieces of an FAI installation fit together. 
 
+<li> <a href="https://wiki.debian.org/DebianLAN">Debian Local Area
+Network</a> is a project, that provides a FAI configuration for
+setting up a local network with centralized user and machine
+management.
+
 <!-- 
 <li> <a href=""></a>
 -->
