add user report

--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,32 @@ Currently we have more than 280 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Sven Schumacher, lastname tfd uni=minus=hannover dot=de
+<br><b>Date:</b> Tue, 10 Dec 2013 17:51:32 +0100
+
+<pre>
+How many hosts have you installed using fai? <b>>50</b>
+Which version of fai are you using? <b>4.0.6</b>
+Which version are you using as your install kernel? linux-kernel-amd64 (debian)
+
+Which types of hosts are you installing with fai? Clusternodes, Workstation-PCs (dual boot), Servers
+
+How do you boot your hosts?
+  via network (PXE, DHCP): yes, all of them
+             using FAI-CD: no
+           from USB stick: no
+
+Does the default install kernel recognize all your hardware? yes, it does.
+
+Do you manage your configuration space under version control? Not at the moment, but in future: yes
+How big is your config space (Mbytes, # of files)? 516kB, #93
+How many files do you have in ../config/files? 18
+What types of scripts are you using for local customization? shell mainly
+
+<b>What is the business of your company/organisation?</b> Higher Education, <a href="http://www.tfd.uni-hannover.de">Institute of Turbomachinery and Fluid-Dynamics </a>
+</pre> <HR>
+
+
 <b>From:</b> Steffen Eichler,  name1.name2 @ stayfriends.com
 <br><b>Date:</b> Wed, 20 Nov 2013 17:13:29 +0100
 <pre>
