--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,41 @@ Currently we have more than 280 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Jurrie Overgoor, info == narrowxpres = nl
+<br><b>Date:</b> Mon, 23 Dec 2013 20:21:51 +0100
+<pre>
+How many hosts have you installed using fai? <b>30+</b> and counting
+Which version of fai are you using? <b>FAI 3.4.8ubuntu2</b>
+Which version are you using as your install kernel? Plain Debian kernel (stable)
+
+Which types of hosts are you installing with fai? Digital signage systems
+
+How do you boot your hosts?
+  From USB stick. I give the hostname at the Grub boot prompt, and Fai 
+  does the rest (by choosing the correct files and classes)
+
+Does the default install kernel recognize all your hardware? Yes. I use a <a href="http://www.nexcom.com/Products/multi-media-solutions/digital-signage-player/cost-effective-player/digital-signage-player-ndis-125-l">NDiS 125-L</a> right now. 
+
+Do you manage your configuration space under version control? Yes, Subversion
+
+How big is your config space (Mbytes, # of files)? 60 MB, #211
+How many files do you have in ../config/files? 145
+What types of scripts are you using for local customization? Shell mainly, and some Perl.
+
+<b>What is the business of your company/organisation?</b> digital signage solution provider, <a href="http://narrowxpres.nl/">narrowXpres.nl</a>
+<br><b>Additional comments:</b>
+I really like the fact that I can do an USB install and just give the 
+hostname - then I can walk away. The client installs, reboots, 
+synchronizes, and off it goes :)
+</pre> <HR>
+
+
+
+
+
+
+
+
 <b>From:</b> Sven Schumacher, lastname tfd uni=minus=hannover dot=de
 <br><b>Date:</b> Tue, 10 Dec 2013 17:51:32 +0100
 
