--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,32 @@ Currently we have more than 280 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> René Bleisch, lastname climate =at= unibe dot TLD for schweiz
+<br><b>Date:</b> Wed, 29 Jan 2014 13:33:24 +0100
+<pre>
+How many hosts have you installed using fai? <b>30</b>
+Which version of fai are you using? <b>4.0.6</b>
+Which version are you using as your install kernel? Debian wheezy plain
+
+Which types of hosts are you installing with fai? Linux workstations
+
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? no
+Which drivers are missing? atheros network card drivers, evtl. audio drivers (I sometimes have problems with getting sound)
+
+Do you manage your configuration space under version control? yes, svn
+How big is your config space (Mbytes, # of files)? 107M, 365 files
+How many files do you have in ../config/files? 199 files
+What types of scripts are you using for local customization? shell, perl
+
+
+<b>What is the business of your company/organisation?</b> University, <a href="http://www.climate.unibe.ch">Climate and Environmental Physics Group, Univ. Bern</a>
+<br><b>Additional comments:</b>
+I use it to install all workstations of our Linux network, because its very easy and fast to do lots of installations.
+</pre> <HR>
+
+
+
 <b>From:</b> Jurrie Overgoor, info == narrowxpres = nl
 <br><b>Date:</b> Mon, 23 Dec 2013 20:21:51 +0100
 <pre>
