--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
 	      <a href="/download/" title="Download">Download</a>
 	      <ul>
 		<li><a href="/download/">Packages</a></li>
-		<li><a href="/fai-cd/" title="FAI-CD">Get FAI-CD</a></li>
+		<li><a href="/fai-cd/" title="FAI-CD">FAI-CD</a></li>
 		<li><a href="/questionnaire/" title="FAI Questionaire">FAI questionaire</a></li>
 	      </ul>
 	    </li>
