--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -27,7 +27,21 @@
       <div id="content">
 <!-- removed breadcrumb -->
 
-<h1>FAI CD: Installation from CD, DVD or USB stick</h1>
+<h1>FAI CD 4.1 for wheezy</h1>
+<ul>
+<li>
+<a href=faicd64-4.1.iso>FAI CD</a>, <a href=faicd64-4.1.iso.md5>md5sum</a>
+(using FAI 4.1, 64bit kernel 3.2, size 629MB)
+</ul>
+<p>
+Please send comments to 
+<A href="mailto:fai@informatik.uni-koeln.de">
+fai@informatik.uni-koeln.de</A> or the fai mailling list.
+<HR>
+<p>
+
+
+<h2>FAI CD: Installation from CD, DVD or USB stick</h2>
 
 <b>FAI CD is the easy way to start with FAI.</b>
 <P>
@@ -42,27 +56,6 @@ pictures</a> showing a complete installation from CD (<a
   href="/slideshow/fai-cd-slideshow.tar.gz">all pictures in a tarball</a>)
 <HR>
 
-<h3>FAI CD for squeeze</h3>
-<ul>
-<li>
-<a href=faicd-3.4.8.iso>ISO image for i386</a>, <a href=faicd-3.4.8.iso.md5>md5sum</a>
-(using FAI 3.4.8, kernel 2.6.32, size 563MB)
-
-<li>
-<a href=faicd64-3.4.8.iso>ISO image for amd64</a>,  <a href=faicd64-3.4.8.iso.md5>md5sum</a> (using FAI 3.4.8, kernel 2.6.32, size 601MB)
-
-
-<li>
-<a href=faicd-linux3.1-3.4.8.iso>ISO image for amd64 using Linux 3.1</a>,  <a href=faicd-linux3.1-3.4.8.iso.md5>md5sum</a> (using FAI 3.4.8, kernel 3.1.0-grml64, size 622MB)
-
-
-</ul>
-<p>
-Please send comments to 
-<A href="mailto:fai@informatik.uni-koeln.de">
-fai@informatik.uni-koeln.de</A> or the fai mailling list.
-<HR>
-<p>
 
 
 <h3>FAI CD on a USB stick (using grub2)</h3>
