--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -58,17 +58,9 @@ pictures</a> showing a complete installation from CD (<a
 
 
 
-<h3>FAI CD on a USB stick (using grub2)</h3>
-<ul>
-<li> get the ISO image (here faicd.iso)
-<li> create a ext2 file system on your USB stick (here /dev/sdf1)
-<li> mount /dev/sdf1 /media/stick
-<li> mount -o loop faicd.iso /mnt
-<li> cp -a /mnt/* /media/stick
-<li> umount /mnt
-<li> grub-install --no-floppy --root-directory=/media/stick/ /dev/sdf
-<li> umount /media/stick
-</ul>
+<h3>FAI on a USB stick</h3>
+
+<a href="../download/misc/faicd2usb">Here's</a> a small shell script for creating a USB stick from the ISO image.
 
 
 <h3>FAI multi-distribution CD</h3>
@@ -105,7 +97,7 @@ password fai is available.
 
 <hr>
 <ADDRESS>
-Thu, 15 Sep 2011 14:15:38 +0200
+Thu, 06 Feb 2014 18:29:03 +0100
 </ADDRESS>
 
 
