add video, minor changes

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -63,9 +63,10 @@ can be displayed
 <li> Make nfsroot generic, remove server specific configs
 <li> --- TODO ---
 <li> relax and recover
-<li> --- MINOR WISHES (will be postponed to 4.1) ---
+<li> --- Added in FAI 4.1 ---
 <li> send MAC address to faimond (or hostname) DONE
 <li> new action inventory DONE
+<li> --- TODO's for the next versions ---
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
@@ -77,7 +78,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Fri, 29 Nov 2013 16:16:52 +0100
+Fri, 07 Feb 2014 17:09:50 +0100
 </ADDRESS>
 
       </div>
