--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -37,7 +37,8 @@
 <ul>
 <li> <a href="fai-cd.avi">Video</a> (3:30min, 3.5MB) of a <a href="/fai-cd">FAI CD</a> installation.
 <a href="fai-cd-win.avi">Video for Windows users</a>
-<li> <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Ubuntu Oneiric (11.10) installation</a>
+<li> Ubuntu Oneiric (11.10) installation <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Video 1</a>
+and <a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>
 </ul>
 
 <p>
