image is now also link to the next image

--- a/slideshow/page106.html
+++ b/slideshow/page106.html
@@ -29,7 +29,7 @@
 <h1 class="page_title">FAI CD Slideshow (6 of 16)</h1>
 
 <div class="img_block">
-<img src="106.png" class="img" alt="FAI-CD">
+<a href="page107.html"><img src="106.png" class="img" alt="FAI-CD"></a>
 </div>
 <div class="nav_block">
 <a href="page101.html" class="link">|&lt;&lt;Start</a>&nbsp;&nbsp;-&nbsp;&nbsp;
