--- a/slideshow/page105.html
+++ b/slideshow/page105.html
@@ -29,7 +29,7 @@
 <h1 class="page_title">FAI CD Slideshow (5 of 16)</h1>
 
 <div class="img_block">
-<img src="105.png" class="img" alt="FAI-CD">
+<a href="page106.html"><img src="105.png" class="img" alt="FAI-CD"></a>
 </div>
 <div class="nav_block">
 <a href="page101.html" class="link">|&lt;&lt;Start</a>&nbsp;&nbsp;-&nbsp;&nbsp;
