download is link to FAI-CD, move FAI-CD before download

--- a/menu.html
+++ b/menu.html
@@ -14,10 +14,10 @@
 	    <li><a href="/screenshots/" title="Screenshots">Screenshots</a></li>
 
 	    <li class="active">
-	      <a href="/download/" title="Download">Download</a>
+	      <a href="/fai-cd/" title="Download">Download</a>
 	      <ul>
-		<li><a href="/download/">Packages</a></li>
 		<li><a href="/fai-cd/" title="FAI-CD">FAI-CD</a></li>
+		<li><a href="/download/">Packages</a></li>
 		<li><a href="/questionnaire/" title="FAI Questionaire">FAI questionaire</a></li>
 	      </ul>
 	    </li>
