--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -27,11 +27,6 @@
       <div id="content">
 <!-- removed breadcrumb -->
 
-<h2>Sample log files</h2>
-<ul>
-<li> <a href="/logs">Log files</a> of successfully installed computers, all in one <a href="/logs.tar.gz">tar file</a>
-</ul>
-
 <h2>Videos</h2>
 
 <ul>
@@ -58,9 +53,17 @@ screenshot for animated gif)
 
 <h2>A slideshow of an installation via CD</h2>
 <p>
-Sample log file <a href="fai.txt">fai.log</a>.
 <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"/>
  </a>
+
+<p>
+
+<h2>Sample log files</h2>
+<ul>
+<li> <a href="fai.txt">fai.log</a> from an installation
+<li> <a href="/logs">More Log files</a> of successfully installed computers
+</ul>
+
 
       </div>
     </div>
