The FAQ is so outdated, to disable it from the menu

--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
 	    <li class="active"><a href="/guide/">Documentation</a>
 	      <ul>
 <!--		<li><a href="/guide/" title="Documentation">FAI - Guide</a></li> -->
-		<li><a href="/faq/">FAQ</a></li>
+<!--		<li><a href="/faq/">FAQ</a></li> -->
 		<li><a href="/fai-guide/">FAI Guide</a></li>
 		<li><a href="/doc/man/" title="man pages">Manual pages</a></li>
 		<li><a href="/otherdocs/">Other documentation</a></li>
