add link to my talks

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -32,13 +32,17 @@
 
 <li> <a href="http://wiki.fai-project.org/wiki/Variables">List</a>  of important variables
 inside FAI
- <li> A <a href="http://wiki.fai-project.org/wiki/FAI_Installation_Overview
-">visual overview</a> of how all the pieces of an FAI installation fit together. 
+
+<li> <a href="/talks/">Talks</a>  of Thomas, the main author
 
 <li> <a href="https://wiki.debian.org/DebianLAN">Debian Local Area
 Network</a> is a project, that provides a FAI configuration for
 setting up a local network with centralized user and machine
 management.
+
+ <li> A <a href="http://wiki.fai-project.org/wiki/FAI_Installation_Overview
+">visual overview</a> of how all the pieces of an FAI installation fit together. 
+
 
 <!-- 
 <li> <a href=""></a>
