add download button, major changes in page structur

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -27,29 +27,34 @@
       <div id="content">
 <!-- removed breadcrumb -->
 
-<h1>FAI CD 4.1 for wheezy</h1>
-<ul>
-<li>
-<a href=faicd64-4.1.iso>FAI CD</a>, <a href=faicd64-4.1.iso.md5>md5sum</a>
-(using FAI 4.1, 64bit kernel 3.2, size 629MB)
-</ul>
-<p>
-Please send comments to 
-<A href="mailto:fai@informatik.uni-koeln.de">
-fai@informatik.uni-koeln.de</A> or the fai mailling list.
+<h1>FAI CD: the easy way to start with FAI</h1>
+
+<br>
+<br>
+<br>
+<p style="text-align: center;">
+<span class="downloadbox-border" >
+<a href="faicd64-4.1.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Download FAI CD</span>
+</a>
+</span>
+</p>
+<br>
+
+<p style="text-align: center;">
+FAI 4.1, Debian Wheezy, Kernel 3.2, amd64, size 629MB,
+<a href=faicd64-4.1.iso.md5>md5sum</a>
 <HR>
 <p>
 
 
-<h2>FAI CD: Installation from CD, DVD or USB stick</h2>
+<h2>Installation from CD, DVD or USB stick</h2>
 
-<b>FAI CD is the easy way to start with FAI.</b>
 <P>
 Perform a FAI installation from CD-ROM without setting up an install server.
 FAI-CD puts all data needed for a fully automatic installation on a
-CD. So no network is needed and you can install the whole system from
-CD. The script creates an ISO image that includes the nfsroot, the
-configuration space and a partitial Debian mirror.
+CD. No network is needed and you can install the whole system from
+CD. 
 <p>
 Look at the fai-cd slideshow! <a href="/slideshow/">16
 pictures</a> showing a complete installation from CD (<a
@@ -79,13 +84,11 @@ password fai is available.
 <HR>
 <p>
 
-<h3>Short description for the sample FAI-CD image</h3>
+<h3>Short description for the FAI-CD</h3>
 
 <ul>
-<!-- <li> Choose FAISERVER for installing the host as a FAI install server -->
 
-<li> The system will be installed to the first disk (either IDE, SATA or
-SCSI or virtual disk). All data on the disk will be deleted.
+<li> The system will be installed to the first disk. All data on the disk will be deleted.
 <li>
 
 <li> All log files from the installation can be found in <tt>/var/log/fai/localhost/last/</tt>
