--- a/features/index.html
+++ b/features/index.html
@@ -73,7 +73,7 @@ FAI is rock-solid. It's now more than ten years old. FAI was started in 1999 at
 the University of Cologne (<a href=http://www.uni-koeln.de>Universit&auml;t zu K&ouml;ln</a>), when
 <a href="http://www.informatik.uni-koeln.de/~lange">Thomas</a> had to
 organize an installation of a Linux cluster with one server and 16
-clients. Today, FAI is regularly used in varying environments,
+clients. Today, FAI is regularly used in <a href="/reports/">varying environments</a>,
 ranging from a dozen machines up to several thousands machines.
 <p>
       </div>
