--- a/sources/index.html
+++ b/sources/index.html
@@ -29,15 +29,6 @@
 
 <h1>FAI Sources</h1>
 
-The FAI software is divided into several packages:
-<ul>
-<li> <b>fai-server</b>: Package needed on the install server
-<li> <b>fai-client</b>: This package is needed on all hosts
-<li> <b>fai-doc</b>: Contains the documentation
-<li> <b>fai-nfsroot</b>: Package only needed inside the nfsroot
-<li> <b>fai-quickstart</b>: Metapackage for easy setup of an install server
-</ul>
-
 <ul>
 <li>
 <div class="featurebox"><h3>
@@ -45,20 +36,25 @@ The FAI software is divided into several packages:
 </h3></div>
 <li> <A href="https://github.com/faiproject/fai">Browsable source code</A> via http
 <li> <a href=http://lists.alioth.debian.org/pipermail/fai-commit/>git commit mails</a>
-<li> <a href="/sources/news.html">NEWS</A>: user visible changes of the sources and <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>detailed changelog</a>.
-
+<li> <a href="/sources/news.html">NEWS</A>: user visible changes of the sources
+<li> <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>Detailed changelog</a>
 <li> List of <a href="http://wiki.fai-project.org/index.php/Variables">important variables</a> inside FAI
-
 </ul>
+
+
+<h1>QA and Bugs</h1>
+<ul>
+<li> <a href="http://packages.qa.debian.org/fai">QA page</A> of FAI
+<li> <a href="http://bugs.debian.org/src:fai">Bugs</a> in the Debian Bug Tracking System
+</ul>
+
 
 
 <h2>Packages for testing of the master branch</h2>
 <ul>
-
 <li> Overview of the automatic build process:
 <a href="http://jenkins.grml.org/job/fai-binaries/">http://jenkins.grml.org/job/fai-binaries/</a>
 </ul>
-
 <ul>
 
 <li> Package reporitory for automatic builds
@@ -66,12 +62,6 @@ The FAI software is divided into several packages:
 <pre>deb http://jenkins.grml.org/debian fai main</pre>
 </ul>
 
-
-<h1>Bugs</h1>
-<ul>
-<li> <a href="http://packages.qa.debian.org/fai">QA page</A> of FAI
-<li> <a href="http://bugs.debian.org/src:fai">Bugs</a> in the Debian Bug Tracking System
-</ul>
 
 <p>&nbsp<p>
 
