--- a/index.html
+++ b/index.html
@@ -27,17 +27,33 @@
       <div id="content">
 <!-- removed breadcrumb -->
 
+<p style="float:left; width: 65%">
 FAI is a non-interactive system to install, customize and manage
 Linux systems and software configurations on computers as well as
 virtual machines and chroot environments, from small networks to
 large-scale infrastructures like clusters and cloud environments.
-<p>
+</p>
+<p style="float:left; width: 65%">
 It's a tool for unattended mass deployment of Linux. You can take one
 or more virgin PC's, turn on the power, and after a few minutes,
 the systems are installed, and completely configured to your exact
 needs, without any interaction necessary.
 </p>
-<h3>Motto: Plan your installation, and FAI installs your plan.</h3>
+<p style="float:right;">
+<!-- <p style="text-align: center;"> -->
+<span class="downloadbox-border" >
+<a href="faicd64-4.1.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Download FAI CD</span>
+</a>
+</span>
+</p>
+
+<br></br>
+<p></p>
+<br></br>
+
+<p style="clear:both;text-align:center;font-family: arial,verdana,sans-serif;font-size:150%">
+Motto: Plan your installation, and FAI installs your plan.</p>
 
 <h2>NEWS</h2>
 
@@ -81,10 +97,8 @@ needs, without any interaction necessary.
 <li> <a href=http://www.netways.de> <img src=pics/netways.png alt=netways></a> </li>
 <li> <a href=http://www.spotify.com> <img src=pics/spotify.png alt=spotify></a> </li>
 <li> <a href=http://www.debian.org> <img src=pics/openlogo-50.png alt=debian></a> </li>
--->
 </ul> 
-</li>
-</ul>
+-->
 
 
 <p></p>
