add logos of distributions to webpage

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ or more virgin PC's, turn on the power, and after a few minutes,
 the systems are installed, and completely configured to your exact
 needs, without any interaction necessary.
 </p>
-<p style="float:right;">
+<p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
 <a href="faicd64-4.1.iso" style="text-decoration: none">
@@ -55,17 +55,21 @@ needs, without any interaction necessary.
 <p style="clear:both;text-align:center;font-family: arial,verdana,sans-serif;font-size:150%">
 Motto: Plan your installation, and FAI installs your plan.</p>
 
-<h2>NEWS</h2>
+<h2 style="display:inline-block;width:40%">NEWS</h2>
 
 <ul>
 
 <li>[4 Feb 2014] <b>FAI 4.1 released</b></li>
-<li>[3 Sep 2013] <b>FAI 4.0.8 released</b></li>
+<li>[3 Sep 2013] FAI 4.0.8 released</li>
 <li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
 <li>[21 Dec 2009] The FAI project celebrates its 10th anniversary. (<a href="/doc/10-jahre-fai.pdf">article in German)</a></li>
 </ul>
 
-<h2>Features</h2>
+<div style="width:30%;float:right;position:relative; top:-110px;">
+<img alt="distributions" src="/pics/dist-logos.png" width="270px">
+</div>
+
+<h2 style="display:inline-block;width:40%">Features</h2>
 <ul>
 <li> Installs and updates Debian, Ubuntu, CentOS, RHEL, SUSE, ...</li>
 <li> Centralized deployment and configuration management</li>
@@ -100,8 +104,8 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 </ul> 
 -->
 
-
 <p></p>
+<br></br>
 <b>FAI is free software, distributed under the terms of the GNU General
 Public License, version 2 or any later version.</b>
 
