--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -68,11 +68,13 @@ pictures</a> showing a complete installation from CD (<a
 <a href="../download/misc/faicd2usb">Here's</a> a small shell script for creating a USB stick from the ISO image.
 
 
-<h3>FAI multi-distribution CD</h3>
+<h3>FAI CD Multi distribution</h3>
 <ul>
-<li> This CD image can install Debian 6, CentOS 6 and Scientific Linux Cern 6
+<li> This CD image can install Debian 6, CentOS 6 and Scientific Linux Cern 6 from CD
+<li> You can select from simple installation without any X11 or including a desktop
 <li>
-<a href=faicd-multi-distrib-3.4.8.iso>ISO image for i686</a>,  <a href=faicd-multi-distrib-3.4.8.iso.md5>md5sum</a> (using FAI 3.4.8, kernel 2.6.32, size 686MB)
+<a href=faicd-multi-distrib-4.1.iso>FAI CD Multi ISO image</a>,  <a href=faicd-multi-distrib-3.4.8.iso.md5>md5sum</a> 
+<li> FAI 4.1, kernel 3.2, amd64, size 686MB
 
 <li> For Debian it uses the package mirror on the CD, for CentOS and SLC it connects to the fastest network mirror
 
@@ -100,7 +102,7 @@ password fai is available.
 
 <hr>
 <ADDRESS>
-Thu, 06 Feb 2014 18:29:03 +0100
+Tue, 11 Feb 2014 16:55:32 +0100
 </ADDRESS>
 
 
