--- a/reports/index.html
+++ b/reports/index.html
@@ -552,7 +552,7 @@ What types of scripts are you using for local customization?
   take over for the continuous configuration management afterwards.
   The config space for these tools is therefore much larger.
 
-<b>What is the business of your company/organisation?</b> Non-profit research institute. <a href="http://gsi.de/">GSI Helmholtzzentrum für Schwerionenforschung</a>
+<b>What is the business of your company/organisation?</b> Non-profit research institute. <a href="http://gsi.de/">GSI Helmholtzzentrum für Schwerionenforschung</a>
 <br><b>Additional comments:</b> 
 FAI serves us very well since many years now. <a href="pictures/Prometheus.jpg">Picture of one cluster</a>
 </pre> <HR>
