remove unused js code

--- a/reports/index.html
+++ b/reports/index.html
@@ -7,10 +7,6 @@
       <title>FAI - Fully Automatic Installation</title>
       <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="/css/ie6_or_less.css" />
-	  <![endif]-->
-	  <script type="text/javascript" src="/css/common.js"></script>
 
 <style type="text/css">
 hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:both}
@@ -21,7 +17,7 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
     <div id="wrap">
       <div id="header">
 	<div id="site-name">
-	  <a href="/fai">FAI - Fully Automatic Installation</a>
+	  <a href="/">FAI - Fully Automatic Installation</a>
 	</div>
 <!-- removed header-menu-unused.htm -->
       </div>
