--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
       <meta name="Title" content="FAI - Homepage" />
       <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="css/ie6_or_less.css" />
-	  <![endif]-->
-	  <script type="text/javascript" src="css/common.js"></script>
   </head>
 
   <body id="type-b">
@@ -73,7 +69,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <ul>
 <li> Installs and updates Debian, Ubuntu, CentOS, RHEL, SUSE, ...</li>
 <li> Centralized deployment and configuration management</li>
-<li> Installs XEN domains, VirtualBox and Vserver</li>
+<li> Installs virtual machines using KVM, XEN or VirtualBox and Vserver</li>
 <li> Easy set up of software RAID and LVM</li>
 <li> Full remote control via ssh during installation</li>
 <li> Integrated disaster recovery system</li>
