--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -42,7 +42,8 @@
 
 <p style="text-align: center;">
 FAI 4.1, Debian Wheezy, Kernel 3.2, amd64, size 629MB,
-<a href=faicd64-4.1.iso.md5>md5sum</a>
+<a href=faicd64-4.1.iso.md5>md5sum</a>,
+<a href=sha256sums.asc>sha256sum</a>
 <HR>
 <p>
 
@@ -72,7 +73,8 @@ pictures</a> showing a complete installation from CD (<a
 <li> This CD image can install Debian 6, CentOS 6 and Scientific Linux Cern 6 from CD
 <li> You can select from simple installation without any X11 or including a desktop
 <li>
-<a href=faicd-multi-distrib-4.1.iso>FAI CD Multi ISO image</a>,  <a href=faicd-multi-distrib-4.1.iso.md5>md5sum</a> 
+<a href=faicd-multi-distrib-4.1.iso>FAI CD Multi ISO image</a>,  <a href=faicd-multi-distrib-4.1.iso.md5>md5sum</a> ,<a href=sha256sums.asc>sha256sum</a>
+
 <li> FAI 4.1, kernel 3.2, amd64, size 686MB
 
 <li> For Debian it uses the package mirror on the CD, for CentOS and SLC it connects to the fastest network mirror
@@ -101,7 +103,7 @@ password fai is available.
 
 <hr>
 <ADDRESS>
-Tue, 11 Feb 2014 16:55:32 +0100
+Wed, 05 Mar 2014 13:25:29 +0100
 </ADDRESS>
 
 
