--- a/poster/index.html
+++ b/poster/index.html
@@ -40,9 +40,9 @@
 <b>FAI flyer, english version</b>
 </div>
 </td><td width="270"><div>
-<a href="/poster/poster_a4.pdf"><img alt="poster thumb" src="poster-thumb.png" border="0" ></a>
+<a href="/poster/poster.pdf"><img alt="poster thumb" src="poster-thumb.png" border="0" ></a>
+<b>FAI poster</b>
 </div>
-<a href="/poster/poster_a3.pdf">larger</a> DIN A3 version.
 </td></tr>
 </table>
 
