--- a/reports/index.html
+++ b/reports/index.html
@@ -28,9 +28,61 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 
 <h1>User reports</h1>
 
-Currently we have more than 280 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
+Currently we have more than 290 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
 <p>
 <hr/>
+
+<b>From:</b> Roland Dieterich, lastname mpipz dot mpg.de
+<br><b>Date:</b> Mon, 28 Apr 2014 16:48:18 +0200
+<pre>
+How many hosts have you installed using fai? about <b>80</b>
+Which version of fai are you using? <b>4.0.8</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai?
+    servers (virtual and physical), desktops, cluster nodes
+
+How do you boot your hosts?  via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? yes
+Do you manage your configuration space under version control? yes (git) 
+How big is your config space (Mbytes, # of files)? 24M, 974 files
+How many files do you have in ../config/files? 523
+
+What types of scripts are you using for local customization? shell, cfengine
+
+<b>What is the business of your company/organisation?</b> science/research, <a href="http://www.mpipz.mpg.de/">Max Planck Institute for Plant Breeding Research</a>
+</pre> <HR>
+
+
+<b>From:</b> anonymous
+<br><b>Date:</b> Tue, 01 Apr 2014 10:07:43 +0200
+<pre>
+How many hosts have you installed using fai? <b></b> 100 on 1gbit network all at once (30 minutes total)
+Which version of fai are you using? <b>4.1</b>
+Which version are you using as your install kernel? 
+    plain Debian kernel with lustre,ofed(mellanox) modules
+
+Which types of hosts are you installing with fai? frontends, cluster nodes
+
+How do you boot your hosts? via network (PXE, DHCP) with IPMI
+Does the default install kernel recognize all your hardware? yes
+
+Do you manage your configuration space under version control? yes (git)
+How big is your config space (Mbytes, # of files)? 259M, mostly all in the files subdirectory
+How many files do you have in ../config/files? 32
+What types of scripts are you using for local customization? shell, puppet, expect
+
+<b>What is the business of your company/organisation?</b> High Performance Computing , HPC
+<br><b>Additional comments:</b>
+We have also an internal FAI install server with syslinux menu that
+deploy frontends,nodes (centos,debian,redhat) entirely configured with
+HPC clusters software (mpi, infiniband(mellanox/intel), lustre ecc ecc)
+
+We use fai for deployment and puppet for tiny customization on all nodes
+For large update we use fai softupdate. We use Fai sysinfo like rescue boot
+</pre> <HR>
+
+
 
 <b>From:</b> René Bleisch, lastname climate =at= unibe dot TLD for schweiz
 <br><b>Date:</b> Wed, 29 Jan 2014 13:33:24 +0100
