--- a/download/index.html
+++ b/download/index.html
@@ -61,6 +61,9 @@ from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 <h1>Packages for Ubuntu</h1>
 
 Have a look at <a href="https://launchpad.net/~fai/+archive/ppa">PPA</a> or the
+
+<a href="https://launchpad.net/~fai/+archive/testing/">testing PPA</a>
+and 
 <a href="https://launchpad.net/ubuntu/+source/fai">list</a> of FAI packages in Ubuntu releases.
 <p>
 <div class="featurebox"><h3>
